@@ -65,13 +65,40 @@ Interestingly, standard RMI requests do not include a dedicated opcode byte. Ins
 * `[4 bytes]` Argument Count
 * `[N Elements]` Arguments (Type Tag + Value)
 
-**In flight at once.** One connection may have 32 frames being decoded and executed at the same time
-(`zeroz.ws.maxConcurrentFramesPerSession`). A frame that arrives while the connection is at its limit
-waits — nothing is dropped and no call fails, so a burst is served a few at a time rather than
-refused. Waiting slows down that one connection's read loop, which is the point; other connections
-are unaffected. The limit exists because decoding is where a small message becomes a large object
-graph, so a message-size limit is only a real ceiling if the number of messages being decoded at once
-is bounded too.
+### One connection's messages are handled in the order they were sent (0.8.0+)
+
+**The server handles one connection's messages one at a time, in the order the client wrote them.**
+A message is not started until the message before it on the same connection has been handled. This is
+something an application may rely on: anything a browser sends after a live edit — a service call, a
+lock request, a shared-signal write — is handled after that edit, so the call decides on the value the
+person actually left in the box.
+
+The transport already promised this. A WebSocket delivers one connection's messages in order and the
+container hands them over one at a time; before 0.8.0 the server threw that away by giving every
+message straight to its own thread, so up to 32 from one browser ran at once and finished in whatever
+order they finished. Measured in a browser on the fixed and the unfixed server, typing into a live
+field and pressing a button with no pause: the unfixed server decided the button's call on the
+previous value in 15 runs out of 15; the fixed server used the value that had just been typed in all
+15.
+
+**Ordering is per connection and nothing else.** Every connection has a queue of its own, so a slow
+call for one person never delays anybody else. Measured with one connection blocked on a call that
+never returns, a second connection was answered 19 ms later.
+
+**How much may be waiting.** One connection may have 32 messages waiting or being handled
+(`zeroz.ws.maxQueuedFramesPerSession`; the name before 0.8.0 was
+`zeroz.ws.maxConcurrentFramesPerSession`, still read). A message arriving at a full queue makes that
+one connection wait until there is room — nothing is dropped and no call fails, so a burst is served
+one after another rather than refused. The limit exists because decoding is where a small message
+becomes a large object graph, so a message-size limit is only a real ceiling if the number of
+messages queued behind it is bounded too.
+
+**Two things are deliberately outside the queue.** The keepalive is answered on the connection's read
+thread before anything is queued, so a busy connection still answers pings and is not cut by a proxy.
+And a lock request that has to wait for somebody else (`LiveMutex`, up to 30 seconds) lets the
+messages behind it past: it has read something and changed nothing at that point, so nothing it did
+can land out of order, and holding the line would stall everything else that person does for half a
+minute.
 
 ### Server Responses (Server -> Client)
 
@@ -120,7 +147,7 @@ application's service interface.
 
 After **25 seconds of silence** the client sends a five-byte RMI-shaped frame naming the reserved
 service `zeroz4j.keepalive`, method `ping`, with correlation id `0` — fire and forget, because
-nothing waits for the answer. The server recognises the name before service dispatch and replies with
+nothing waits for the answer. The server recognizes the name before service dispatch and replies with
 one `0x19 PONG`: no service lookup, nothing checked beyond the connection already being open, no
 request context.
 
@@ -149,8 +176,13 @@ LiveSync handles real-time object graph synchronization and reactive signals.
   * Mutation accepted.
   * Payload: `[8 bytes]` New Version
 * **0x15 — REJECT** (Server -> Client)
-  * Mutation rejected (e.g., version conflict).
-  * Payload: `[8 bytes]` Current Version + `[Type Tag + Value]` Current Object + `[String]` Reason
+  * A live mutation was refused, and why.
+  * Payload: `[String]` Model class name + `[String]` Reason
+  * There is no version and no object here. The corrected state travels ahead of this frame as an
+    ordinary `0x10` update aimed at the writer's session, so by the time the reason arrives the
+    screen is already right. This frame exists so the refusal is a sentence somebody can read rather
+    than a value that springs back with no explanation. The client hands it to
+    `LiveMutationRefusals` (0.8.0+); before that it was received and discarded as an unknown frame.
 * **0x16 — SIGNAL_SUB** (Client -> Server)
   * Reserved. The current subscribe mechanism rides an RMI-shaped frame to the internal
     service `zeroz4j.signals` (method `subscribe`, one String argument: the signal name);
@@ -205,9 +237,219 @@ ZeroZ Stack serializes data dynamically using `BinarySerializer`. Each serialize
 | `0x1F` | char[] | 4-byte length + `N` × 2 bytes |
 | `0x20` | boolean[] | 4-byte length + `N` × 1 byte |
 | `0x21` | Lazy | `[String]` session-scoped handle. **Never the contents** — the client resolves it with an RMI round trip on first `get()` |
+| `0x22` | Record | `[String]` object id + `[String]` ClassName + components from the generated `<Record>_Serializer`, in canonical order |
+| `0x23` | Sealed | `[String]` the sealed base's FQCN, then the value itself as `0x07`, `0x22`, `0x0E` or `0x00` |
 
-Note the tag space (`0x00`–`0x21`) is independent of the frame opcode space; a tag byte never appears
+Note the tag space (`0x00`–`0x23`) is independent of the frame opcode space; a tag byte never appears
 where an opcode is expected.
+
+## Object identity, and how far it reaches
+
+Every model value is written with an object id. The second time the same instance is met, only that
+id goes out, as `0x0E`. That is what lets a graph contain loops and shared parts and arrive with its
+shape intact rather than as a tree of copies.
+
+**The rule is: identity holds within one top-level value, and not between two.**
+
+The set of "already written" instances is emptied whenever a value is written that was not reached
+from inside another one. So:
+
+```java
+Order order = new Order();
+order.setBilling(address);
+order.setShipping(address);          // the same Address instance
+send(order);                          // arrives as ONE address, in both fields
+
+send(List.of(address, address));      // arrives as TWO addresses
+```
+
+In the first case the two fields are reached from inside `order`, so the second is a reference. In
+the second case each element of the list *is* a top-level value, so each is written in full.
+
+Two consequences worth knowing before relying on either:
+
+- **Do not use `==` across a call boundary to decide whether two things are the same.** Compare by
+  id, or by `equals`. This is the one that costs an afternoon.
+- A model reached through a `List`, `Set`, `Map` or a field declared as a model type all behave
+  the same way. There is no longer a path that writes a model in place without recording it.
+
+### Two kinds of name (0.8.0+)
+
+An id on the wire is one of two things, and which one it is decides how long it means anything.
+
+| | What it is | How long it means something |
+|---|---|---|
+| **A handle** | a random 36-character identifier, kept in the server's and the browser's handle registry | until the object it names is no longer used |
+| **A message name** | a short id beginning with `~`, counted from zero inside each top-level value | only inside the message it arrived in |
+
+A handle is given to a **`@LiveSync` model, and to every object reachable inside one**. Nothing else
+gets one. That is not an optimization: those are exactly the objects a later message needs to be able
+to name again — a client edit coming back up, a re-sync after a reconnect, a lock request — and the
+whole graph inside a live object is included because a client edit arrives as one whole graph and is
+applied part by part into the objects those parts name.
+
+Everything else — the return value of a call, the payload of an event, the value of a shared signal —
+is a **value**. It is written with a message name, it is never entered in a registry, and the
+receiving side builds a fresh instance for it. Shared references and loops inside one top-level value
+still arrive intact, because that is all the message name was ever needed for.
+
+Two consequences worth knowing:
+
+- **Sending the same ordinary object twice sends two objects.** It was already true across two
+  top-level values; it is now true across two messages as well. Compare by id or `equals`, never by
+  `==`.
+- **An ordinary object a client sends back up is a copy.** Before 0.8.0, passing a previously
+  received object back as a call argument silently reached into the server's own instance and
+  overwrote it. The server now builds a fresh instance from what the client sent, and its own data is
+  left alone. A change a client should be able to make to server state goes through a service method
+  or through `@LiveSync`, both of which check it first.
+
+### Neither side keeps an object alive (0.8.0+)
+
+The handle registry holds what it names **weakly**, on both tiers. An entry disappears once the
+application itself has let go of the object; no timer, no eviction policy, no ceiling. Before 0.8.0
+both registries held every object for ever, so a screen that redraws itself every few seconds built
+an unbounded pile on the server and in the browser — the failure this rule exists to prevent.
+
+What follows from it:
+
+- **The server answers a re-sync only for objects it still holds.** If the application there has
+  dropped its last reference to a live object, its handle is gone and the answer is the same as
+  after a server restart: no frame, one counted log line, and the client re-fetches. Keep live
+  objects in your store or a field, which is where they already live in any real application.
+- **A browser asks for exactly what its screen still holds.** Anything scrolled away, replaced or
+  navigated off is not asked for.
+
+## Nested models are written by reference, not in place
+
+Before 0.8.0, a field whose declared type was a model class was written straight into the buffer
+with nothing recorded about it. It saved a few bytes and cost three things:
+
+- two models referring to each other recursed until the stack ran out;
+- the same instance in two fields arrived as two objects;
+- a model nested inside a `@LiveSync` one was rebuilt with a plain constructor, so it never became a
+  tracked instance and edits to it were invisible.
+
+A model reached through a collection never had any of those problems, because collections always
+took the tagged path. Now every model-typed field takes it too. The cost is an id and a class name
+per nested model — bounded by how many model-typed fields a model has, not by how much data there
+is, since collections were already paying it.
+
+## Inheritance
+
+A model may extend another model, and **the base class's fields travel with it**. The base has no
+serializer of its own; what it declares is written as part of each concrete model below it, base
+fields first, then the subclass's own.
+
+An abstract model is never a value in its own right. It gets no serializer and no entry in the
+registry — it exists to hand its fields down. A field declared as an abstract model type still works:
+the tagged path dispatches on the runtime type.
+
+Two shapes are refused at compile time, both because they used to lose data silently:
+
+| Refused | Why |
+|---|---|
+| A model extending a class that is **not** a `@DataModel` and that declares instance fields | there is no way to know those fields belong on the wire, so they were dropped without a word. Annotate the base, or move the fields down. A base class with no fields needs no annotation. |
+| A model declaring a field name a base class already declares | both would be written, and both read back through the same accessor, so one would overwrite the other |
+
+## Records
+
+A `record` annotated `@DataModel` travels as `0x22`. The bytes look like an ordinary object; what
+differs is **when the value exists**.
+
+An ordinary model is created empty, registered under its id, and only then are its fields read into
+it. That order is what lets a graph point back at something still being read — the instance already
+exists, so a `0x0E` reference to it resolves.
+
+A record's components are final and are set only by its canonical constructor, so the reader has to
+do the opposite: read every component, then construct, then register under the id.
+
+The consequence is a real limit, and both sides state it rather than let it fail quietly:
+
+- **A record cannot take part in a reference cycle.** A cycle needs the record to exist while its own
+  components are still being read. The **writer** refuses when a value inside a record points back at
+  that record, naming the record and saying to use a class for the type that closes the loop. The
+  **reader** refuses a hand-built payload that does the same, rather than resolving the reference to
+  null. Use a class wherever the loop closes: a class is created empty and filled afterwards, so it
+  can point back at itself.
+- **The same record appearing twice is fine.** The second appearance is an ordinary `0x0E` reference,
+  and by the time the reader meets it the record has been built.
+
+A record still cannot be a persistence root: EclipseStore reaches fields directly and the JVM refuses
+that for records without `--add-exports java.base/jdk.internal.misc=ALL-UNNAMED`. That is a
+persistence rule, not a wire rule.
+
+Records are safe in the browser. TeaVM 0.15.0 lowers a record to an ordinary class, including the
+`equals`, `hashCode` and `toString` the compiler generates through `invokedynamic`, so a record used
+as a map key or a set element behaves in the browser as it does on the server.
+
+### The class a developer used to write, and the record they write now
+
+```java
+// Before — ten lines of ceremony, all of it required by how the reader worked
+@DataModel
+public class Money {
+    private long amount;
+    private String currency;
+    public Money() { }
+    public Money(long amount, String currency) {
+        this.amount = amount;
+        this.currency = currency;
+    }
+    public long getAmount() { return amount; }
+    public void setAmount(long amount) { this.amount = amount; }
+    public String getCurrency() { return currency; }
+    public void setCurrency(String currency) { this.currency = currency; }
+}
+
+// Now
+@DataModel
+public record Money(long amount, String currency) { }
+```
+
+`@LiveSync` and `@ClientWritable` are refused on a record at compile time. Both are about editing an
+object in place through its setters and reporting the change; a record has no setters and never
+changes.
+
+## Sealed types
+
+A value whose declared type is a sealed `@DataModel` interface or sealed abstract class travels as
+`0x23`: the base's own class name, then the value.
+
+```java
+@DataModel
+public sealed interface Message permits Text, Ping, Attachment { }
+
+@DataModel public record Text(String author, String body) implements Message { }
+@DataModel public record Ping(long sentAt) implements Message { }
+@DataModel public final class Attachment implements Message { /* ... */ }
+```
+
+A field, a list element, a call argument or a return value may now be a `Message`. What arrives is a
+`Text`, a `Ping` or an `Attachment` — the concrete type, with no cast and no kind field.
+
+**Why the base name is on the wire.** `sealed` means the compiler knows the complete list of classes
+the value may be. The annotation processor writes that list into the generated registrar, and the
+reader looks up the base the payload names and refuses any class that base does not permit —
+**before anything is created**. A payload naming a type outside the set fails with a message saying
+which type it named and which ones are permitted. A field declared as the sealed base additionally
+refuses a value of some *other* sealed family, so the check holds even where a cast would not.
+
+The rules the annotation processor enforces, each because the receiver could not act safely
+otherwise:
+
+| Rule | Why |
+|---|---|
+| Every permitted class is itself `@DataModel` | otherwise a payload naming it could not be built |
+| Every permitted class is `final` (a record already is) | a `non-sealed` member can be extended by classes outside the set, and the receiver could not tell them apart |
+| A permitted class is not itself sealed | the reader looks up one permitted set; a family of families has no single set to check against |
+| A sealed class base is `abstract` | a base that is also a value of its own would be neither in nor out of its set |
+| A plain, unsealed interface is refused | there is no list, so any class at all could be named |
+
+A sealed abstract class may declare fields the whole family shares. The base has no serializer of its
+own — what it declares is written as part of each member's bytes.
+
+The cost is one extra class-name string per value, on top of the one an object already carries.
 
 Resolving a lazy handle rides an RMI-shaped frame to the internal service `zeroz4j.lazy` (method
 `resolve`, one String argument: the handle), alongside `zeroz4j.signals` and `zeroz4j.livesync`. The
@@ -228,11 +470,19 @@ itself in this order, all as fire-and-forget frames:
 3. A re-subscribe for every shared signal the client declared — `zeroz4j.signals`, method
    `subscribe`; each is answered with a `0x17` update carrying the current retained value.
 4. One re-sync request — internal service **`zeroz4j.resync`**, method `sync`, one argument: the
-   `List` of every object handle this client holds. The server answers with one `0x10` frame per
-   handle it still knows, carrying that object's current state, applied in place on the client
+   `List` of every object handle this client still holds. The server answers with one `0x10` frame
+   per handle it still knows, carrying that object's current state, applied in place on the client
    exactly like any LiveSync update. Re-serializing also re-registers the objects' lazy-field
    handles for the new session. Handles the server does not know — it restarted since they were
-   fetched — produce no frame and one server-side log line naming the count.
+   fetched, or the application there has let go of the object — produce no frame and one server-side
+   log line naming the count.
+
+   **The list is capped at 10,000 handles.** A client that somehow holds more throws its list away
+   rather than sending it, logs one line saying so, and lets the application re-fetch. The cap is an
+   escape hatch, not a budget: a request larger than the 4 MB a connection accepts is refused, the
+   connection is closed, and the client reconnects and sends the identical request — for ever. A tab
+   in that state could never connect again. The server's own record of what it sent a browser holds
+   at most 10,000 objects anyway, so a longer list could not have been answered.
 
 A handle presented to `zeroz4j.resync` is answered only when the server's own record says that
 browser was sent the object. **A handle names an object; it does not stand for permission to have
